<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngresoNodo">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/relativeL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            >

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="3sp"
                android:background="@color/colorTexto"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3sp"
                    android:background="@color/colorFondo">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity=""
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/ingreso_nodo"
                        android:textColor="@color/colorBlanco"
                        android:textSize="25dp" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/linear1"
                android:layout_gravity="center_vertical"
                android:layout_margin="3sp"
                android:background="@color/colorTexto"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3sp"
                    android:background="@color/colorFondo">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_gravity=""
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/ingreso_id_nodo"
                        android:textColor="@color/colorBlanco"
                        android:textSize="13dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@color/colorFondo"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/id_nodo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorBlanco"
                            android:gravity="center"
                            android:text="1"
                            android:textColor="@color/colorFondo"
                            android:textSize="20dp" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/linear5"
                android:layout_gravity="center_vertical"
                android:layout_margin="3sp"
                android:background="@color/colorTexto"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3sp"
                    android:background="@color/colorFondo">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_gravity=""
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/ingreso_nodo_cx"
                        android:textColor="@color/colorBlanco"
                        android:textSize="13dp"
                        android:id="@+id/titulo_ingreso_xcoor"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@color/colorFondo"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/editXCoor"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorBlanco"
                            android:gravity="center"
                            android:hint="@string/ingreso_nodo_cx_hint"
                            android:textColor="@color/colorFondo"
                            android:inputType="numberDecimal|numberSigned"/>


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/linear2"
                android:layout_gravity="center_vertical"
                android:layout_margin="3sp"
                android:background="@color/colorTexto"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3sp"
                    android:background="@color/colorFondo">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_gravity=""
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/ingreso_nodo_cy"
                        android:textColor="@color/colorBlanco"
                        android:textSize="13dp"
                        android:id="@+id/titulo_ingreso_ycoor"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@color/colorFondo"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/editYCoor"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorBlanco"
                            android:gravity="center"
                            android:hint="@string/ingreso_nodo_cx_hint"
                            android:textColor="@color/colorFondo"
                            android:inputType="numberDecimal|numberSigned"/>


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/linear3"
                android:layout_gravity="center_vertical"
                android:layout_margin="3sp"
                android:background="@color/colorTexto"
                android:orientation="horizontal">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3sp"
                    android:background="@color/colorFondo">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_gravity=""
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/es_apoyo"
                        android:textColor="@color/colorBlanco"
                        android:textSize="13dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@color/colorFondo"
                        android:gravity="center">

                        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/radio_grupo_apoyo"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            >

                            <RadioButton
                                android:id="@+id/radio_apoyo_si"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"

                                android:buttonTint="@color/colorBlanco"
                                android:text="@string/si"
                                android:textColor="@color/colorBlanco" />

                            <RadioButton
                                android:id="@+id/radio_apoyo_no"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:buttonTint="@color/colorBlanco"
                                android:text="@string/no"
                                android:textColor="@color/colorBlanco" />
                        </RadioGroup>


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear6"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_below="@+id/linear7"
                android:layout_gravity="center_vertical"
                android:layout_margin="3sp"
                android:background="@color/colorTexto"
                android:orientation="horizontal">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3sp"
                    android:background="@color/colorFondo">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_gravity=""
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/restriccion_nodo"
                        android:textColor="@color/colorBlanco"
                        android:textSize="13dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@color/colorFondo"
                        android:gravity="center">

                        <ImageButton
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:layout_gravity=""
                            android:layout_marginLeft="10dp"
                            android:gravity="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="12dp"
                            android:src="@drawable/apoyo3"
                            android:scaleType="fitCenter"
                            android:id="@+id/apoyo_3"/>
                        <ImageButton
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:layout_gravity=""
                            android:layout_marginLeft="10dp"
                            android:gravity="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="12dp"
                            android:src="@drawable/apoyo2"
                            android:scaleType="fitCenter"
                            android:id="@+id/apoyo_2"/>


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_below="@+id/linear6"
                android:layout_gravity="center_vertical"
                android:layout_margin="3sp"
                android:background="@color/colorTexto"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3sp"
                    android:background="@color/colorFondo"
                    android:gravity="center">

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_gravity=""
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:text="@string/guardar_continuar"
                        android:textColor="@color/colorNegro"
                        android:textSize="10dp"
                        android:id="@+id/boton_guardar_seguir"/>
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_gravity=""
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:text="@string/agregar_otro_nodo"
                        android:textColor="@color/colorNegro"
                        android:textSize="10dp"
                        android:id="@+id/boton_agregar_otro_nodo"/>
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_gravity=""
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:text="@string/cancelar"
                        android:textColor="@color/colorNegro"
                        android:textSize="10dp"
                        android:id="@+id/boton_cancelar"/>


                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>